---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1]",
    "EXPR [ (-1, _0) (1, _1) -2 ]"
  ],
  "debug_symbols": "dY/RCoMwDEX/Jc99qIPB8FfGkFijFEJbYisM8d8XRTcZ+JTenJ5LO0NHbRkaH/o4Qv2coRXP7IeGo8PsY9DtvBg4YpOFSFdw4molFAoZ6lCYDUzIZbs0JgzbzChKrQEKnU4t7D3TelrMz7bXamVvu1zZx1e/q//ShM7L/4snFI8t0x77EtyJ5nc6yPHjJNFRV4TWpo1p9wc=",
  "file_map": {}
}
